testing/framework/resources/Advanced/Failing/mondrian/query5954.e
Redwood City	F	\N	71.0000
Redwood City	M	\N	52.0000
Redwood City	F	#2	10.0000
Redwood City	M	#208	8.0000
Redwood City	F	Unit H103	3.0000
